image_creator: add gzip option
By default, gzip is supported by u-boot and busybox, so it is a good
choice of compression from that standpoint.

--- a/image_creator/example_config.ini
+++ b/image_creator/example_config.ini
@@ -25,6 +25,14 @@ OUTFILE=/tmp/sd_card_image/sd_card.img
 
 CREATE_BZ2=yes
 
+#-------------------------------------------------------------------------------
+# Create GZIP
+#-------------------------------------------------------------------------------
+# Automatically creates a .gz version of the image.
+# U-boot support decompressign .gz images
+# Select "yes" or "no"
+
+CREATE_GZIP=yes
 
 #-------------------------------------------------------------------------------
 # Create ZIP
@@ -54,9 +62,9 @@ CREATE_ZIP=yes
 # use numbers less than standard card sizes like 3GB, 7GB, 15GB
 #
 # MB = 1000*1000
-# M = 1024*1024,
+# M  = 1024*1024
 # GB = 1000*1000*1000
-# G = 1024*1024*1024
+# G  = 1024*1024*1024
 
 TOTAL_IMAGE_SIZE=2GB    # MBR/partition table + FAT partition + ext partition
 
