flash_writer: add support for binary file programming
- can program .srec or .bin
- changed xx_SREC to xx_FILE
- file type (.bin or .srec) is automatically detected
- set defaults to .bin because programming time is faster
- should only send CR, not CR + LF for flash writer commands
- fixed not showing file size correctly

--- a/flash_writer/config.ini
+++ b/flash_writer/config.ini
@@ -42,10 +42,16 @@ if [ "$BUILT_OUTSIDE_YOCTO" == "1" ] ; then
 	# For Flashwritter, the filename doesn't alwasy match the BOARD name
 	FLASHWRITER=`find ../../rzg2_flash_writer/AArch64_output/*.mot`
 
-	SA0_SREC=../../arm-trusted-firmware/z_deploy/bootparam_sa0.srec
-	BL2_SREC=../../arm-trusted-firmware/z_deploy/bl2-${BOARD}.srec
-	SA6_SREC=../../arm-trusted-firmware/z_deploy/cert_header_sa6.srec
-	BL31_SREC=../../arm-trusted-firmware/z_deploy/bl31-${BOARD}.srec
-	UBOOT_SREC=../../renesas-u-boot-cip/.${BOARD}/u-boot.srec
+	if [ "$FLASH" == "0" ] ; then
+		DEPLOY_DIR=z_deploy_spi
+	else
+		DEPLOY_DIR=z_deploy_emmc
+	fi
+
+	SA0_FILE=../../arm-trusted-firmware/$DEPLOY_DIR/bootparam_sa0.srec
+	BL2_FILE=../../arm-trusted-firmware/$DEPLOY_DIR/bl2-${BOARD}.bin
+	SA6_FILE=../../arm-trusted-firmware/$DEPLOY_DIR/cert_header_sa6.srec
+	BL31_FILE=../../arm-trusted-firmware/$DEPLOY_DIR/bl31-${BOARD}.bin
+	#UBOOT_FILE=../../renesas-u-boot-cip/.${BOARD}/u-boot.srec
 fi
 
