build_scripts: add renesas-u-boot-cip

--- a/flash_writer/config.ini
+++ b/flash_writer/config.ini
@@ -52,6 +52,6 @@ if [ "$BUILT_OUTSIDE_YOCTO" == "1" ] ; then
 	BL2_FILE=../../arm-trusted-firmware/$DEPLOY_DIR/bl2-${BOARD}.bin
 	SA6_FILE=../../arm-trusted-firmware/$DEPLOY_DIR/cert_header_sa6.srec
 	BL31_FILE=../../arm-trusted-firmware/$DEPLOY_DIR/bl31-${BOARD}.bin
-	#UBOOT_FILE=../../renesas-u-boot-cip/.${BOARD}/u-boot.srec
+	UBOOT_FILE=../../renesas-u-boot-cip/.out_${BOARD}/u-boot.bin
 fi
 
