flash_writer: Add USB Download Mode support

--- a/flash_writer/config.ini
+++ b/flash_writer/config.ini
@@ -14,6 +14,12 @@ FLASH=0
 #BOARD=CUSTOM
 
 
+# Set the serial device interface
+# For Renesas RZ/G boards, this will be /dev/ttyUSB0
+# For 'USB Download mode', this will be /dev/ttyACM0   (refer to USB_Download_Mode.md )
+# If you have multiple USB serial devices connected, you might have to change this to ttyUSB1,2,3...
+SERIAL_DEVICE_INTERFACE=/dev/ttyUSB0
+#SERIAL_DEVICE_INTERFACE=/dev/ttyACM0
 
 # (Optional)
 # If you keep your arm-trusted-firmware and u-boot files some place other than under the Yocto
