flash_writer: fix spelling

--- a/flash_writer/config.ini
+++ b/flash_writer/config.ini
@@ -45,7 +45,7 @@ fi
 # (Optional)
 #BUILT_OUTSIDE_YOCTO=1
 if [ "$BUILT_OUTSIDE_YOCTO" == "1" ] ; then
-	# For Flashwritter, the filename doesn't alwasy match the BOARD name
+	# For Flashwriter, the filename does not always match the BOARD name
 	FLASHWRITER=`find ../../rzg2_flash_writer/AArch64_output/*.mot`
 
 	if [ "$FLASH" == "0" ] ; then
