image_creator: Make temp directory configurable
Reported-by: Bernd

--- a/image_creator/example_config.ini
+++ b/image_creator/example_config.ini
@@ -2,6 +2,19 @@
 # The reason it is a separate file is so that you can keep
 # multiple versions around for later.
 
+#-------------------------------------------------------------------------------
+# Temporary data directory
+#-------------------------------------------------------------------------------
+# A location is need to hold the files while we prepare the image.
+# The location /tmp is RAM based, so if you do not have much RAM in your
+# system, you might have to choose a different location.
+# Hints:
+# TMP="/tmp"       - default (RAM based file system)
+# TMP="~/TMP"      - local user directory (hard drive)
+#-------------------------------------------------------------------------------
+
+TMP="/tmp"
+
 
 #-------------------------------------------------------------------------------
 # Output file
@@ -14,7 +27,7 @@
 # free sytem RAM back up.
 # However, just make sure you have enough free system memory first.
 
-OUTFILE=/tmp/sd_card_image/sd_card.img
+OUTFILE=${TMP}/sd_card_image/sd_card.img
 
 
 #-------------------------------------------------------------------------------
