flash_writer: Add GUI menu interface

--- a/flash_writer/example_config.ini
+++ b/flash_writer/example_config.ini
@@ -1,11 +1,3 @@
-# Modify the line below to point to the base of your VLP64 directory
-VLP64_BASE=/home/renesas/yocto/rzg2_bsp_eva_v102
-
-# What do you want to program the boot loaders into?
-# 0 = SPI Flash
-# 1 = eMMC
-FLASH=0
-
 # Uncomment the board you are using
 #BOARD=ek874
 #BOARD=hihope-rzg2m
@@ -13,6 +5,13 @@ FLASH=0
 #BOARD=hihope-rzg2h
 #BOARD=CUSTOM
 
+# Modify the line below to point to the location of your files. 
+FILES_DIR=/home/renesas/yocto/rzg2_bsp_eva_v106/build/tmp/deploy/images/${BOARD}
+
+# What do you want to program the boot loaders into?
+# 0 = SPI Flash
+# 1 = eMMC
+FLASH=0
 
 # Set the serial device interface
 # For Renesas RZ/G boards, this will be /dev/ttyUSB0
@@ -22,24 +21,19 @@ SERIAL_DEVICE_INTERFACE=/dev/ttyUSB0
 #SERIAL_DEVICE_INTERFACE=/dev/ttyACM0
 
 # (Optional)
-# If you keep your arm-trusted-firmware and u-boot files some place other than under the Yocto
-# deploy directory, you can specify that here instead.
-FILES_DIR=${VLP64_BASE}/build/tmp/deploy/images/${BOARD}
-
-# (Optional)
 # Modify this section below if you selected 'CUSTOM' for your board
 if [ "$BOARD" == "CUSTOM" ] ; then
 
-	BOARD="myboard"    # Change 'CUSTOM' to your own name so you can use it for the files below
+	BOARD="myboard"
 	BOARD_NAME="My RZ/G2 Board"
 
-	FILES_DIR=$VLP64_BASE/build/tmp/deploy/images/${BOARD}
+	FILES_DIR=~/yocto/renesas_bsp/build/tmp/deploy/images/${BOARD}
 	FLASHWRITER=$FILES_DIR/AArch64_Flash_writer_SCIF_DUMMY_CERT_E6300400_${BOARD}.mot
-	SA0_SREC=$FILES_DIR/bootparam_sa0.srec
-	BL2_SREC=$FILES_DIR/bl2-${BOARD}.srec
-	SA6_SREC=$FILES_DIR/cert_header_sa6.srec
-	BL31_SREC=$FILES_DIR/bl31-${BOARD}.srec
-	UBOOT_SREC=$FILES_DIR/u-boot-elf-${BOARD}.srec
+	SA0_FILE=$FILES_DIR/bootparam_sa0.srec
+	BL2_FILE=$FILES_DIR/bl2-${BOARD}.srec
+	SA6_FILE=$FILES_DIR/cert_header_sa6.srec
+	BL31_FILE=$FILES_DIR/bl31-${BOARD}.srec
+	UBOOT_FILE=$FILES_DIR/u-boot-elf-${BOARD}.srec
 fi
 
 # (Optional)
@@ -60,4 +54,3 @@ if [ "$BUILT_OUTSIDE_YOCTO" == "1" ] ; then
 	BL31_FILE=../../arm-trusted-firmware/$DEPLOY_DIR/bl31-${BOARD}.bin
 	UBOOT_FILE=../../renesas-u-boot-cip/.out_${BOARD}/u-boot.bin
 fi
-
