Change the default prompt
Signed-off-by: Show Liu <show.liu.yj@renesas.com>

--- a/docker_setup/Dockerfile.ubuntu1604
+++ b/docker_setup/Dockerfile.ubuntu1604
@@ -54,4 +54,8 @@ RUN mkdir -p /workdir
 ENV TERM xterm-256color
 
 USER $USERNAME
+
+RUN echo PS1=\"\\[\\e[33m\\]dir\:\ \\w\\n\\[\\e[1\;31m\\]\\u\@\(docker\)\$\\[\\e[00m\\]\ \" >> ~/.bashrc
+RUN echo printf=\"\\e]2\;docker\\a\" >> ~/.bashrc
+
 WORKDIR /workdir
