--- a/openocd/renesas_rz_g2.cfg
+++ b/openocd/renesas_rz_g2.cfg
@@ -1,13 +1,15 @@
+# SPDX-License-Identifier: GPL-2.0-or-later
+
 # Renesas RZ/G2 SOCs
 # - There are a combination of Cortex-A57s, Cortex-A53s, Cortex-A55, Cortex-R7 and Cortex-M33 for each SOC
 # - Each SOC can boot through the Cortex-A5x cores
 
-# Supported Gen3 SOCs and their cores:
-# RZ/G2H: Cortex-A57 x 4, Cortex-A53 x 4, Cortex-R7 x 2 (Lock-Step)
-# RZ/G2M: Cortex-A57 x 2, Cortex-A53 x 4, Cortex-R7 x 2 (Lock-Step)
-# RZ/G2N: Cortex-A57 x 2,                 Cortex-R7 x 2 (Lock-Step)
-# RZ/G2E:                 Cortex-A53 x 2, Cortex-R7 x 2 (Lock-Step)
-# RZ/G2L:                 Cortex-A55 x 2, Cortex-M33
+# Supported RZ/G2 SOCs and their cores:
+# RZ/G2H: Cortex-A57 x4, Cortex-A53 x4, Cortex-R7 x2
+# RZ/G2M: Cortex-A57 x2, Cortex-A53 x4, Cortex-R7 x2
+# RZ/G2N: Cortex-A57 x2,                Cortex-R7 x2
+# RZ/G2E:                Cortex-A53 x2, Cortex-R7 x2
+# RZ/G2L:                Cortex-A55 x2, Cortex-M33
 
 # Usage:
 # There are 2 configuration options:
@@ -52,7 +54,7 @@ switch $_soc {
 	G2N {
 		set _CHIPNAME r8a774bx
 		set _num_ca57 2
-		set _num_ca53 4
+		set _num_ca53 0
 		set _num_cr7 1
 		set _boot_core CA57
 		set _ap_num 1
@@ -60,7 +62,7 @@ switch $_soc {
 	G2E {
 		set _CHIPNAME r8a774c0
 		set _num_ca57 0
-		set _num_ca53 1
+		set _num_ca53 2
 		set _num_cr7 1
 		set _boot_core CA53
 		set _ap_num 1
@@ -118,69 +120,53 @@ set CM33_CTIBASE 0xE0042000
 set smp_targets ""
 
 proc setup_a5x {core_name dbgbase ctibase num boot} {
-	global _CHIPNAME
-	global _DAPNAME
-	global smp_targets
-	global _ap_num
 	for { set _core 0 } { $_core < $num } { incr _core } {
-		set _TARGETNAME $_CHIPNAME.$core_name.$_core
+		set _TARGETNAME $::_CHIPNAME.$core_name.$_core
 		set _CTINAME $_TARGETNAME.cti
-		cti create $_CTINAME -dap $_DAPNAME -ap-num $_ap_num \
+		cti create $_CTINAME -dap $::_DAPNAME -ap-num $::_ap_num \
 			-baseaddr [lindex $ctibase $_core]
-		set _command "target create $_TARGETNAME aarch64 -dap $_DAPNAME \
-			-ap-num $_ap_num -dbgbase [lindex $dbgbase $_core] -cti $_CTINAME"
-		if { $_core == 0  && $boot == 1 } {
-			set _targets "$_TARGETNAME"
-		} else {
-			set _command "$_command -defer-examine"
+		target create $_TARGETNAME aarch64 -dap $::_DAPNAME \
+			-ap-num $::_ap_num -dbgbase [lindex $dbgbase $_core] -cti $_CTINAME
+		if { $_core > 0 || $boot == 0 } {
+			$_TARGETNAME configure -defer-examine
 		}
-		set smp_targets "$smp_targets $_TARGETNAME"
-		eval $_command
+		set ::smp_targets "$::smp_targets $_TARGETNAME"
 	}
 }
 
 proc setup_cr7 {dbgbase ctibase} {
-	global _CHIPNAME
-	global _DAPNAME
-	set _TARGETNAME $_CHIPNAME.r7
+	set _TARGETNAME $::_CHIPNAME.r7
 	set _CTINAME $_TARGETNAME.cti
-	cti create $_CTINAME -dap $_DAPNAME -ap-num 1 -baseaddr $ctibase
-	set _command "target create $_TARGETNAME cortex_r4 -dap $_DAPNAME \
-		-ap-num 1 -dbgbase $dbgbase"
-	set _command "$_command -defer-examine"
-	eval $_command
+	cti create $_CTINAME -dap $::_DAPNAME -ap-num 1 -baseaddr $ctibase
+	target create $_TARGETNAME cortex_r4 -dap $::_DAPNAME \
+		-ap-num 1 -dbgbase $dbgbase -defer-examine
 }
 
 proc setup_cm33 {dbgbase ctibase} {
-        global _CHIPNAME
-        global _DAPNAME
-        set _TARGETNAME $_CHIPNAME.m33
+        set _TARGETNAME $::_CHIPNAME.m33
         set _CTINAME $_TARGETNAME.cti
-        cti create $_CTINAME -dap $_DAPNAME -ap-num 2 -baseaddr $ctibase
-        set _command "target create $_TARGETNAME cortex_m -dap $_DAPNAME \
-                -ap-num 2 -dbgbase $dbgbase"
-        set _command "$_command -defer-examine"
-        eval $_command
+        cti create $_CTINAME -dap $::_DAPNAME -ap-num 2 -baseaddr $ctibase
+        target create $_TARGETNAME cortex_m -dap $::_DAPNAME \
+                -ap-num 2 -dbgbase $dbgbase -defer-examine
 }
 
 # Organize target list based on the boot core
-if { [string equal $_boot_core CA57] } {
+if { $_boot_core == "CA57" } {
 	setup_a5x a57 $CA57_DBGBASE $CA57_CTIBASE $_num_ca57 1
 	setup_a5x a53 $CA53_DBGBASE $CA53_CTIBASE $_num_ca53 0
 	setup_cr7 $CR7_DBGBASE $CR7_CTIBASE
-} elseif { [string equal $_boot_core CA53] } {
+} elseif { $_boot_core == "CA53" } {
 	setup_a5x a53 $CA53_DBGBASE $CA53_CTIBASE $_num_ca53 1
 	setup_a5x a57 $CA57_DBGBASE $CA57_CTIBASE $_num_ca57 0
 	setup_cr7 $CR7_DBGBASE $CR7_CTIBASE
-} elseif { [string equal $_boot_core CA55] } {
+} elseif { $_boot_core == "CA55" } {
 	setup_a5x a55 $CA55_DBGBASE $CA55_CTIBASE $_num_ca55 1
 	setup_cm33 $CM33_DBGBASE $CM33_CTIBASE
 }
-
+echo "SMP targets:$smp_targets"
 eval "target smp $smp_targets"
 
 proc init_reset {mode} {
-
     # Assert both resets: equivalent to a power-on reset
     adapter assert trst assert srst
 
@@ -189,5 +175,4 @@ proc init_reset {mode} {
 
     # TAP should now be responsive, validate the scan-chain
     jtag arp_init
-
 }
