Modifications to ease integration with other build scripts

--- a/build_scripts/multimedia-modules/config.ini
+++ b/build_scripts/multimedia-modules/config.ini
@@ -7,6 +7,17 @@
 #device=RZG2M
 device=RZG2H
 
+# This is the path where the kernel is built
+#KERNEL_OUT_DIR=~/repos/my-linux-cip/.out
+KERNEL_OUT_DIR=~/rzg_stuff/build_scripts_new/rz_linux-cip/.out
+
+# SDK setup command. SDK  is used to set the cross build environment variables but also for the installation
+SDK_SETUP="source /opt/poky/2.4.3-qtm/environment-setup-aarch64-poky-linux"
+
+# The module (.ko) can be installed automatically on the target via scp
+TARGET_INSTALL=FALSE
+TARGET_IP_ADDRESS=192.168.10.125
+
 # The sources are not available in github, so the tar file is required.
 # It cannot be provided with the script because of licensing.
 GLES_TAR_r8a774e1=../mm_packages/proprietary/RCH3G001L4101ZDO_2_0_9/RCH3G001L4101ZDO/Software/GSX_KM_H3.tar.bz2
@@ -35,14 +46,4 @@ UVCS_PATCHES_PATH=../../patches/uvcs
 # These pathes are available in the VLP, path:
 # meta-rzg2/recipes-kernel/kernel-module-vspmif/kernel-module-vspmif 
 VSPMIF_PATCHES_PATH=../../patches/vspmif
-
-# This is the path where the kernel is built
-KERNEL_OUT_DIR=~/repos/my-linux-cip/.out
-
-# SDK path. It is used to set the cross build environment variables but also for the installation
-SDK_PATH=/opt/poky/2.4.3-we
-
-# The module (.ko) can be installed automatically on the target via scp
-TARGET_INSTALL=FALSE
-TARGET_IP_ADDRESS=192.168.10.125
 
