build_scripts: added support for RZ/G2L and kernel 5.10

--- a/build_scripts/multimedia-modules/config.ini
+++ b/build_scripts/multimedia-modules/config.ini
@@ -5,45 +5,74 @@
 #device=RZG2E
 #device=RZG2N
 #device=RZG2M
-device=RZG2H
+#device=RZG2H
+device=RZG2L
 
-# This is the path where the kernel is built
-#KERNEL_OUT_DIR=~/repos/my-linux-cip/.out
-KERNEL_OUT_DIR=~/rzg_stuff/build_scripts_new/rz_linux-cip/.out
+# Kernel version, 4.19 or 5.10
+KERNEL_VERSION=5.10
+
+# This is the (absolute) path where the kernel is built, it is assumed that the sources are one level below
+KERNEL_OUT_DIR=~/Desktop/temp/rz_linux-cip/.out
 
 # SDK setup command. SDK  is used to set the cross build environment variables but also for the installation
-SDK_SETUP="source /opt/poky/2.4.3-qtm/environment-setup-aarch64-poky-linux"
+#SDK_SETUP="source /opt/poky/3.1.14/environment-setup-aarch64-poky-linux"
+SDK_SETUP="PATH=/opt/arm/gcc-arm-9.2-2019.12-x86_64-aarch64-none-linux-gnu/bin:$PATH ; export CROSS_COMPILE=aarch64-none-linux-gnu-; export ARCH=arm64"
+#SDK_SETUP="PATH=/opt/arm/gcc-arm-10.2-2020.11-x86_64-aarch64-none-elf/bin:$PATH ; export CROSS_COMPILE=aarch64-none-elf-; export ARCH=arm64"
+
+# This is the (absolute) path where the modules are installed
+DEPLOY_DIR=~/Desktop/temp/rz_linux-cip/.deploy/modules
 
 # The module (.ko) can be installed automatically on the target via scp
 TARGET_INSTALL=FALSE
-TARGET_IP_ADDRESS=192.168.10.220
+TARGET_IP_ADDRESS=192.168.10.212
 
 # The sources are not available in github, so the tar file is required.
 # It cannot be provided with the script because of licensing.
-GLES_TAR_r8a774e1=../mm_packages/proprietary/RCH3G001L4101ZDO_2_0_9/RCH3G001L4101ZDO/Software/GSX_KM_H3.tar.bz2
-GLES_TAR_r8a774b1=../mm_packages/proprietary/RCN3G001L4101ZDO_2_0_9/RCN3G001L4101ZDO/Software/GSX_KM_M3N.tar.bz2
-GLES_TAR_r8a774a1=../mm_packages/proprietary/RCM3G001L4101ZDO_2_0_9/RCM3G001L4101ZDO/Software/GSX_KM_M3.tar.bz2
-GLES_TAR_r8a774c0=../mm_packages/proprietary/RCE3G001L4101ZDO_2_0_9/RCE3G001L4101ZDO/Software/GSX_KM_E3.tar.bz2
-UVCS_TAR=../mm_packages/proprietary/RCG3VUDRL4101ZDO_3_0_17/RCG3VUDRL4101ZDO/Software/RCG3VUDRL4101ZDO.tar.bz2
+if [ $KERNEL_VERSION = 4.19 ]; then
+  GLES_TAR_r8a774e1=../mm_packages/proprietary/RCH3G001L4101ZDO_2_0_9/RCH3G001L4101ZDO/Software/GSX_KM_H3.tar.bz2
+  GLES_TAR_r8a774b1=../mm_packages/proprietary/RCN3G001L4101ZDO_2_0_9/RCN3G001L4101ZDO/Software/GSX_KM_M3N.tar.bz2
+  GLES_TAR_r8a774a1=../mm_packages/proprietary/RCM3G001L4101ZDO_2_0_9/RCM3G001L4101ZDO/Software/GSX_KM_M3.tar.bz2
+  GLES_TAR_r8a774c0=../mm_packages/proprietary/RCE3G001L4101ZDO_2_0_9/RCE3G001L4101ZDO/Software/GSX_KM_E3.tar.bz2
+  UVCS_TAR=../mm_packages/proprietary/RCG3VUDRL4101ZDO_3_0_17/RCG3VUDRL4101ZDO/Software/RCG3VUDRL4101ZDO.tar.bz2
+else if [ $KERNEL_VERSION = 5.10 ]; then
+  if [ $device = RZG2L ]; then
+    UVCS_TAR=../mm_packages/RTK0EF0045Z15001ZJ-v0.56_EN/meta-rz-features/recipes-codec/kernel/kernel-module-uvcs-drv/uvcs_lib_package.tar.bz2
+    MALI_TAR=../mm_packages/RTK0EF0045Z13001ZJ-v1.0_EN/meta-rz-features/recipes-graphics/mali/files/mali_pkg_eval_v1.0.tar.gz
+  else
+    GLES_TAR_r8a774e1=../mm_packages/RTK0EF0045Z0022AZJ-v1.0_EN/meta-rz-features/recipes-graphics/PowerVR/kernel-module-gles/GSX_KM_H3.tar.bz2
+    GLES_TAR_r8a774b1=../mm_packages/RTK0EF0045Z0022AZJ-v1.0_EN/meta-rz-features/recipes-graphics/PowerVR/kernel-module-gles/GSX_KM_M3N.tar.bz2
+    GLES_TAR_r8a774a1=../mm_packages/RTK0EF0045Z0022AZJ-v1.0_EN/meta-rz-features/recipes-graphics/PowerVR/kernel-module-gles/GSX_KM_M3.tar.bz2
+    GLES_TAR_r8a774c0=../mm_packages/RTK0EF0045Z0022AZJ-v1.0_EN/meta-rz-features/recipes-graphics/PowerVR/kernel-module-gles/GSX_KM_E3.tar.bz2
+    UVCS_TAR=../mm_packages/RTK0EF0045Z0022AZJ-v1.0_EN/meta-rz-features/recipes-codec/kernel/kernel-module-uvcs-drv/RCG3VUDRL4101ZDO.tar.bz2
+  fi
+  fi
+fi
 
-# These pathes are available in the VLP, path:
+# These patches are available in the VLP, path:
 # meta-rzg2/recipes-kernel/kernel-module-gles/kernel-module-gles
 GLES_PATCHES_PATH=../../patches/gles
 
-# These pathes are available in the VLP, path:
+# These patches are available in the VLP, path:
 # meta-rzg2/recipes-kernel/kernel-module-mmngr/kernel-module-mmngr 
 # meta-rzg2/recipes-kernel/kernel-module-mmngr/kernel-module-mmngrbuf 
 MMNGR_PATCHES_PATH=../../patches/mmngr
 
-# These pathes are available in the VLP, path:
+# These patches are available in the VLP, path:
 # meta-rzg2/recipes-kernel/kernel-module-qos/kernel-module-qos
 QOS_PATCHES_PATH=../../patches/qos
 
-# These pathes are available in the VLP, path:
+# These patches are available in the VLP, path:
 # meta-rzg2/recipes-kernel/kernel-module-uvcs/kernel-module-uvcs
 UVCS_PATCHES_PATH=../../patches/uvcs
 
-# These pathes are available in the VLP, path:
+# These patches are available in the VLP, path:
 # meta-rzg2/recipes-kernel/kernel-module-vspmif/kernel-module-vspmif 
 VSPMIF_PATCHES_PATH=../../patches/vspmif
+
+# These patches are available in the VLP, path:
+# meta-rzg2/recipes-kernel/kernel-module-vspmif/kernel-module-vspm 
+VSPM_PATCHES_PATH=../../patches/vspm
+
+# These patches are available in the package
+MALI_PATCHES_PATH=../../../patches/mali
 
