build_script: Multimedia script fixes and new instructions

--- a/build_scripts/multimedia-modules/config.ini
+++ b/build_scripts/multimedia-modules/config.ini
@@ -11,7 +11,7 @@ device=RZG2L
 # Kernel version, 4.19 or 5.10
 KERNEL_VERSION=5.10
 
-# This is the (absolute) path where the kernel is built, it is assumed that the sources are one level below
+# This is the (absolute) path where the kernel is built. IMPORTANT: it is assumed that the sources are one level below.
 KERNEL_OUT_DIR=~/Desktop/temp/rz_linux-cip/.out
 
 # SDK setup command. SDK  is used to set the cross build environment variables but also for the installation
